mocked backend with json server, added loading spinner

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -83,3 +83,10 @@ ul {
 .gridboard-move-history {
   filter: grayscale(100%);
 }
+
+.loading-spinner {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  min-height: 150px;
+}
