moved title to own component, added error banner, renamed mock file

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -38,6 +38,13 @@ ul {
   min-height: 150px;
 }
 
+/* Gametitle */
+.game-title {
+  text-align: center;
+  margin: 1rem;
+  font-size: 4rem;
+}
+
 /* GameBoard */
 .board {
   width: 250px;
