fixed small screen bg image issue

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -20,23 +20,27 @@ body {
   background-color: white;
 }
 
-/* Small screens: fill the whole screen */
+/* Small screens: fill the whole screen
+ prevent scaling of bg image */
 @media (max-width: 799px) { 
   body {
     background-size: 
       100% 100%,/* gradient */
       cover; /* image */
+    background-attachment: fixed; 
   }
 }
 
-/* Medium screens: prevent image from becoming too tall */
+/* Medium screens: prevent image from becoming too tall,
+ prevent scaling of bg image */
 @media (min-width: 800px) and (max-width: 1000px) {
   body {
     background-size: 
       100% 100%,
       auto 100%; /* image height matches viewport */ 
-    }
+    background-attachment: fixed;
   }
+}
 
 /* Large screens: centered with moderate whitespace */
 @media (min-width: 1001px) {
